# cmyserver

./: CMakeLists.txt  README.md
include/: dynarray.h  net.h
src/: dynarray.c  main.c  net.c
